[package]
name = "pi_link_list"
version = "0.1.7"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "linklist"
repository = "https://github.com/GaiaWorld/pi_link_list.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "linklist"]

[dependencies]
pi_null = "0.1"
getrandom = "0.2"
pi_print_any = "0.1"
derive-deref-rs = "0.1"

[dev-dependencies]
pi_slotmap = "0.1"